# napari-npe2-test

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_npe2_test/: __init__.py  _widget.py  napari.yaml
src/napari_npe2_test/_tests/: test_dock_widget.py
