[metadata]
name = napari-npe2-test
version = 0.0.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-npe2-test
license = BSD-3-Clause
description = Label
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-npe2-test/issues
    Documentation = https://github.com/haesleinhuepf/napari-npe2-test#README.md
    Source Code = https://github.com/haesleinhuepf/napari-npe2-test
    User Support = https://github.com/haesleinhuepf/napari-npe2-test/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-npe2-test = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-npe2-test = napari_npe2_test:napari.yaml
